--- a/front/style.css
+++ b/front/style.css
@@ -203,3 +203,15 @@ body {
 }
 
 /* Toastify */
+.loader {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
